# CppHeaderInjection

./: .gitignore  README.md  pyproject.toml
.header-injection/: config.json
src/cpp_header_injection/: app_conf.py  app_conf_funcs.py  exceptions.py  logger.py  main_cli.py  source_parser.py
src/cpp_header_injection/handlers/: config_handler.py  init_handler.py  run_handler.py
tests/: main_test.py
tests/data/: main.cpp
tests/data/include/: include.hpp
tests/data/include/inner_dir/: include.hpp  log1.hpp  log2.hpp
tests/data/other_dir/include/: other_dir_include.hpp
